Actualizado el TestSmellDetectorMojo.java para la version 8